finshed product vs1.1

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <h1 class="question">Will You Be My Valentine?</h1>
+    <div class="container">
+        <img src="images/peach-cat.gif" alt="random image" id="image">
+        <div class="btn-container">
+            <button id="yes-btn" onclick="changeImage()">yes</button>
+            <button id="no-btn" onclick="changeNo()">no</button>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
