--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Be my Valentine?</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Modak&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <h1 class="question">Will You Be My Valentine?</h1>
-    <div class="container">
-        <img src="images/peach-cat.gif" alt="random image" id="image">
-        <div class="btn-container">
-            <button id="yes-btn" onclick="changeImage()">yes</button>
-            <button id="no-btn" onclick="changeNo()">no</button>
-        </div>
-    </div>
-    <script src="script.js"></script>
-</body>
+    <link rel="stylesheet" href="styles.css" />
+    <title>Valentine</title>
+  </head>
+  <body>
+    <main class="container">
+      <img class="cat-img" src="images/cat-0.gif" alt="Picture of a cat" />
+      <p class="title">Will you be my Valentine?</p>
+      <div class="buttons">
+        <button type="button" class="btn btn--yes">Yes</button>
+        <button type="button" class="btn btn--no">No</button>
+      </div>
+    </main>
+
+    <script type="module" src="script.js"></script>
+  </body>
 </html>
